--- a/_data/skills-frameworks.yml
+++ b/_data/skills-frameworks.yml
@@ -5,29 +5,31 @@
 # - name: Framework
 #   weight: 5
 
-- name: Angular
-  weight: 5
+# - name: Angular
+#   weight: 5
 
 - name: AngularJS
-  weight: 3
-
-- name: React
-  weight: 4
-
-- name: Node
   weight: 1
 
-- name: Flutter
-  weight: 2
+- name: React
+  weight: 3
+
+- name: Redux
+  weight: 3
+
+- name: Node
+  weight: 3
+
+# - name: Flutter
+#   weight: 2
 
 - name: Express
   weight: 3
+# - name: Django
+#   weight: 1
 
-- name: Django
-  weight: 1
+# - name: Spring
+#   weight: 2
 
-- name: Spring
-  weight: 2
-
-- name: Rails
-  weight: 4
+# - name: Rails
+#   weight: 4
