--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -17,45 +17,63 @@
 #     - tag: Rails
 #   timeline-side: right
 
-- title: airbnb
+- title: 0.5Bn Finhealth Private Limited
   title-url: https://example.com/
-  date: Sep 2019 - Present
+  date: May 2020 - Present
+  subtitle: Software Development Engineer - II
+  tags:
+    - tag: Node
+    - tag: Express
+    - tag: Microservices
+    - tag: PostGreSQL
+    - tag: Sequelize
+    - tag: AWS EC2
+    - tag: AWS S3
+    - tag: React
+    - tag: Redux
+    - tag: React-Hooks
+  timeline-side: left
+
+- title: Josh Software Private Limited
+  title-url: https://example.com/
+  date: Feb 2019 - April 2020
   subtitle: Fullstack Developer
   tags:
     - tag: React
-    - tag: Javascript
-    - tag: Ruby
-    - tag: Rails
+    - tag: Redux
+    - tag: Node
+    - tag: SQL
+    - tag: PostGreSQL
+    - tag: Sequelize
+    - tag: AWS EC2
+    - tag: AWS S3
   timeline-side: right
 
-- title: Google
+- title: Coditas Technologies Private Limited
   title-url: https://example.com/
-  date: Mar 2019 - Sep 2019
-  subtitle: Software Engineer as Intern
-  tags:
-    - tag: Flutter
-    - tag: Dart
-    - tag: Keycloak
-  timeline-side: right
-
-- title: Super University
-  title-url: https://example.com/
-  date: 2017 - 2019
-  subtitle: M.Sc. Computer Science
-  timeline-side: left
-
-- title: Facebook
-  title-url: https://example.com/
-  date: Sep 2017 - Mar 2019
-  subtitle: Front-End Developer as Intern
+  date: Jan 2017 - Feb 2019
+  subtitle: Fullstack Developer
   tags:
     - tag: React
     - tag: Node
     - tag: Javascript
+    - tag: MongoDB
+  timeline-side: left
+
+- title: Kanaka Software
+  title-url: https://example.com/
+  date: Dec 2015 - June 2016
+  subtitle: Intern
+  tags:
+    - tag: HTML5
+    - tag: CSS
+    - tag: Javascript
+    - tag: AngularJS
+    - tag: Ionic
   timeline-side: right
 
-- title: Super University
+- title: Pune University
   title-url: https://example.com/
-  date: 2014 - 2017
-  subtitle: B.A. Computer Science
+  date: 2013 - 2016
+  subtitle: Master of Computer Application
   timeline-side: left
