--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 
 # GENERAL SITE SETTINGS
 # title: This will be displayed as the website's name in your browser tab.
-title: Ajit Fawade
+title: Ajit Fawade - Fullstack JavaScript Developer
 # description: This will be meta HTML tag content. This can be ignored.
-description: Portfolio website
+description: Hi, I'm Ajit Fawade. I'm a passionate JavaScript learner. I build web things using React and Node. I like to keep myself updated with the web concepts.
 # baseurl: The subpath of your site
 # > set this to "", if you renamed the repository to <user>.github.io
 baseurl: ""
@@ -34,7 +34,7 @@ show_aboutme_card: true
 # about_me_title: The will be displayed as the title in the About Me section
 about_me_title: About Me
 # about_me_description: This will be displayed under the title.
-about_me_description: I'm a web developer with 4+ years of experience in developing application in different business verticals such as Finance, Construction and Marketing. I love to develop applications from scratch. I always like to be part of the complete software development lifecycle.
+about_me_description: I'm a web developer from Pune, India and currently living in Bengaluru, India. I enjoy building web applications in React and Node from scratch. I have 4+ years of experience in developing web applications in different business verticals such as Finance, Construction and Marketing.
 
 # SKILLS SECTION
 # show_skills_card:
