--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -17,7 +17,7 @@
 #     - tag: Rails
 #   timeline-side: right
 
-- title: 0.5Bn Finhealth Pvt Ltd
+- title: येLo(0.5Bn Finhealth Private Limited)
   title-url: https://www.yelobank.in/
   date: May 2020 - Present
   subtitle: Software Development Engineer - II
