--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ show_aboutme_card: true
 # about_me_title: The will be displayed as the title in the About Me section
 about_me_title: About Me
 # about_me_description: This will be displayed under the title.
-about_me_description: I'm a web developer from Pune, India and currently living in Bengaluru, India. I enjoy building web applications in React and Node from scratch. I have 4+ years of experience in developing web applications in different business verticals such as Finance, Construction and Marketing.
+about_me_description: I'm a web developer from Pune, India. I enjoy building web applications in React and Node from scratch. I have 5+ years of experience in developing web applications in different business verticals such as Finance, Construction and Marketing.
 
 # SKILLS SECTION
 # show_skills_card:
@@ -53,7 +53,7 @@ show_timeline_card: true
 timeline_title: Education & Experience
 # cv_download_link: The link where you host your cv.
 # > e.g. you share your cv on your dropbox, then add the dropbox link here
-cv_download_link: https://drive.google.com/file/d/15GwDahIlUXr89h5t-8KHpqQjHuG-YJmN/view?usp=sharing
+cv_download_link: https://drive.google.com/file/d/1JsFa83S6D4QsOBsF5XnnHYCMou0pNIF_/view?usp=sharing
 
 # PROJECTS SECTION
 # show_projects_card:
