--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -5,17 +5,36 @@
 # > tags: List of tags you want to associate with the entry
 # > timeline-side: The side on which you want to display the entry: left or right
 
-# Example of a timeline entry
-# - title: airbnb
-#   title-url: https://example.com/
-#   date: Sep 2019 - Present
-#   subtitle: Fullstack Developer
-#   tags:
-#     - tag: React
-#     - tag: Javascript
-#     - tag: Ruby
-#     - tag: Rails
-#   timeline-side: right
+- title: Globant
+  title-url: https://www.globant.com/
+  date: September 2021 - Till date
+  subtitle: Senior Software Engineer
+  tags:
+    - tag: Node
+    - tag: Express
+    - tag: Hapi
+    - tag: TypeScript
+    - tag: PostgreSQL
+    - tag: Azure DevOps
+    - tag: React
+    - tag: React-Hooks
+    - tag: Functions and Stored Procedure
+  timeline-side: left
+
+- title: Till POS
+  title-url: https://www.tillpos.com.au/
+  date: June 2021 - August 2021
+  subtitle: Senior Software Engineer
+  tags:
+    - tag: Node
+    - tag: Express
+    - tag: Microservices
+    - tag: AWS API Gateway
+    - tag: React
+    - tag: React-Hooks
+    - tag: GraphQL
+    - tag: TypeScript
+  timeline-side: right
 
 - title: येLo(0.5Bn Finhealth Private Limited)
   title-url: https://www.yelobank.in/
